# tracker

./: .gitignore  Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/store/: apps_store.rs  mod.rs  user_store.rs
frontend/src/ui/: app_list.rs  badges_page.rs  basics.rs  configs.rs  mod.rs  modals.rs  panels.rs  router.rs
frontend/src/ui/utils/: mod.rs
frontend/src/widgets/: app_list.rs  mod.rs
tracker/: Cargo.toml
tracker/src/: lib.rs  main.rs  procs.rs  tracking.rs  utils.rs
tracker/src/procs/: mod.rs  process.rs
tracker/src/store/: apps_store.rs  mod.rs  user_store.rs
tracker/src/tracking/: badges.rs  mod.rs
tracker/src/utils/: mod.rs
tracker/src/win_funcs/: mod.rs  process.rs  user.rs
tracker_app/: Cargo.toml
tracker_app/src/: main.rs
tracker_app/src/ui/: app_list.rs  badges_page.rs  basics.rs  configs.rs  mod.rs  modals.rs  panels.rs  router.rs
tracker_core/: Cargo.toml
tracker_core/src/: lib.rs
tracker_core/src/mac_funcs/: mod.rs  process.rs  user.rs
tracker_core/src/store/: apps_store.rs  user_store.rs
tracker_core/src/tracking/: badges.rs  mod.rs
tracker_core/src/win_funcs/: mod.rs  process.rs
